# forge-forge

./: CLAUDE.md  README.md  SECURITY.md  mcp_server.py  pyproject.toml  registry.yaml
.claude/skills/: forge-audit.md  forge-catalog.md  forge-enforce.md  forge-init.md  forge-manifest-init.md  forge-sync.md
.ike/: ike.json
.research/: research.json
.visionlog/: config.yaml  vision.md
.visionlog/goals/: GOAL-002-full-registry-with-all-13-forges.md  (+2 more)
contracts/: proposal.schema.json
defaults/: baseline.yaml
findings/: 0001-no-unified-repo-manifest-standard-exists-we-re-in-greenfield.md  0002-hybrid-model-is-the-right-architecture-centralized-baseline-repo-local-overrides.md  0003-terraform-plan-apply-model-fits-perfectly-for-agent-driven-enforcement.md  0004-real-failures-that-would-have-been-caught-by-a-manifest.md  0005-key-pitfalls-scope-creep-non-idempotent-enforcement-exception-rot-blast-radius.md  0006-proposed-manifest-schema-v1-modular-sections-mapped-to-forge-owners.md
forge_forge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
proposals/: 2026-03-29-contract-first-forge-architecture.md  2026-03-29-data-model-before-frontend.md  2026-03-29-health-check-same-codepath.md  2026-03-29-improve-forge-previous-runs.md  2026-03-29-instrumentation-check.md  2026-03-29-language-boundary-scoring.md  2026-03-29-learning-forge-proposals-pattern.md  2026-03-29-project-type-detection.md  2026-03-29-real-input-verification.md  2026-03-29-ship-logging-first.md  2026-03-29-skill-pipeline-verification.md
spec/: installed-v1.yaml  manifest-v1.yaml  manifest-v2.yaml
(+4 files in other folders)
